--- a/pre-registration/pre-registration-core/pom.xml
+++ b/pre-registration/pre-registration-core/pom.xml
@@ -7,21 +7,21 @@
 	<parent>
 		<groupId>io.mosip.preregistration</groupId>
 		<artifactId>pre-registration-parent</artifactId>
-		<version>1.2.1-rc1</version>
+		<version>1.2.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>pre-registration-core</artifactId>
-	<version>1.2.1-rc1</version>
+	<version>1.2.1-SNAPSHOT</version>
 	<name>pre-registration-core</name>
 	<description>Maven project of MOSIP Pre-Registration Service</description>
 
 	<properties>
 		<!-- Mosip kernel -->
-		<kernel.templatemanager.velocity.version>1.2.1-rc1</kernel.templatemanager.velocity.version>
-		<kernel.logger.logback.version>1.2.1-rc1</kernel.logger.logback.version>
-		<kernel.dataaccess.hibernate.version>1.2.1-rc1</kernel.dataaccess.hibernate.version>
-		<kernel.bom.version>1.2.1-rc1</kernel.bom.version>
-<!--		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>-->
+		<kernel.templatemanager.velocity.version>1.2.1-SNAPSHOT</kernel.templatemanager.velocity.version>
+		<kernel.logger.logback.version>1.2.1-SNAPSHOT</kernel.logger.logback.version>
+		<kernel.dataaccess.hibernate.version>1.2.1-SNAPSHOT</kernel.dataaccess.hibernate.version>
+		<kernel.bom.version>1.2.1-SNAPSHOT</kernel.bom.version>
+
 	</properties>
 
 	<dependencyManagement>
