--- a/helm/prereg-booking/Chart.yaml
+++ b/helm/prereg-booking/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: prereg-booking
 description: A Helm chart for MOSIP Pre-registration application service
 type: application
-version: 12.0.2
+version: 12.0.2-develop
 appVersion: ""
 dependencies:
   - name: common
