--- a/api-test/src/main/resources/preReg/bookAppointment/bookAppointment.yml
+++ b/api-test/src/main/resources/preReg/bookAppointment/bookAppointment.yml
@@ -93,8 +93,9 @@ BookAppointment:
       description: Book an appointment with a blank preregistration ID
       role: batch
       restMethod: post
+      checkOnlyStatusCodeInResponse: true
       inputTemplate: preReg/bookAppointment/bookAppointment
-      outputTemplate: preReg/error
+      outputTemplate: preReg/responseCode
       input: '{
   "preRegistrationId":"",   
   "registration_center_id": "$registration_center_id$",
@@ -106,12 +107,7 @@ BookAppointment:
   "requesttime": "$TIMESTAMP$"
 }'
       output: '{
-   "errors": [
-    {
-      "errorCode": "PRG_CORE_REQ_016"
-      
-    }
-  ]
+      "responseCode": "500"
 }'
    Prereg_BookAppointment_Invalid_Id:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
@@ -724,6 +720,31 @@ BookAppointment:
     {
       "errorCode": "PRG_CORE_REQ_015"
       
+    }
+  ]
+}'
+   Prereg_BookAppointment_incompleteApplication_preRegistrationId_Neg:
+      endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_30
+      description: Book an appointment with an incomplete application preregistration ID
+      role: batch
+      restMethod: post
+      inputTemplate: preReg/bookAppointment/bookAppointment
+      outputTemplate: preReg/error
+      input: '{
+  "preRegistrationId":"$ID:CreatePrereg_cancell_incomplete_prid_sid_preRegistrationId$",   
+  "registration_center_id": "$registration_center_id$",
+  "id": "mosip.pre-registration.booking.book",
+  "version": "1.0",
+  "appointment_date": "$appointment_date$",
+  "time_slot_from": "$time_slot_from$",
+  "time_slot_to": "$time_slot_to$",
+  "requesttime": "$TIMESTAMP$"
+}'
+      output: '{
+   "errors": [
+    {
+      "errorCode": "PRG_BOOK_RCI_036"
     }
   ]
 }'
